// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Card /> :  Should correctly render <Card /> for each type 1`] = `
<div
  className="Card"
  style={Object {}}
>
  This is a Card.
</div>
`;

exports[`<Card /> :  Should correctly render <Card className="customClass" /> 1`] = `
<div
  className="Card customClass"
  style={Object {}}
>
  This is a Card.
</div>
`;

exports[`<Card /> :  Should correctly render <Card type="dark" /> for each type 1`] = `
<div
  className="Card dark"
  style={Object {}}
>
  This is a Card.
</div>
`;

exports[`<Card /> :  Should correctly render <Card type="inset" /> for each type 1`] = `
<div
  className="Card Inset"
  style={Object {}}
>
  This is a Card.
</div>
`;

exports[`<Card /> :  Should correctly render <Card type="inset-dark" /> for each type 1`] = `
<div
  className="Card dark Inset"
  style={Object {}}
>
  This is a Card.
</div>
`;

exports[`<Card /> :  Should correctly render <Card type="inset-light" /> for each type 1`] = `
<div
  className="Card light Inset"
  style={Object {}}
>
  This is a Card.
</div>
`;

exports[`<Card /> :  Should correctly render <Card type="inset-xdark" /> for each type 1`] = `
<div
  className="Card xdark Inset"
  style={Object {}}
>
  This is a Card.
</div>
`;

exports[`<Card /> :  Should correctly render <Card type="light" /> for each type 1`] = `
<div
  className="Card light"
  style={Object {}}
>
  This is a Card.
</div>
`;

exports[`<Card /> :  Should correctly render <Card type="xdark" /> for each type 1`] = `
<div
  className="Card xdark"
  style={Object {}}
>
  This is a Card.
</div>
`;
